GS-2959 Added field for community newsletter opt-in, fixed alignment on page

--- a/src/webapp/res/css/community/registration/registration.css
+++ b/src/webapp/res/css/community/registration/registration.css
@@ -491,6 +491,10 @@ h1 span {
 	color: #777777;
 }
 
+#reg_1 #terms {
+    clear: left;
+}
+
 .registration #terms .radio, .registration #terms .radiolabelTerms {
     position: relative;
     top: 15px;
@@ -678,7 +682,7 @@ h1 span {
 .registration .next {
 	width: 104px;
 	height: 28px;
-	margin: 60px 170px 90px 0;
+	margin: -30px 170px 90px 0;
 	float: right;
 }
 
@@ -686,18 +690,13 @@ h1 span {
 	background: url(../../../img/community/registration/submit_join.gif) no-repeat top transparent;
     width: 69px;
     height: 69px;
-	margin: 57px 175px 80px 0;
-	_margin: 67px 175px 80px 0;
+	margin: -30px 175px 80px 0;
+	_margin: -20px 175px 80px 0;
 	float: right;
 }
 
 #reg_1 .registration .join a:hover {
 	background: url(../../../img/community/registration/submit_join.gif) no-repeat 0 -69px transparent;
-	width: 69px;
-	height: 69px;
-	margin: 57px 175px 80px 0;
-	_margin: 67px 175px 80px 0;
-	float: right;
     text-decoration: none;
 }
 
@@ -731,14 +730,18 @@ h1 span {
 /* alert box */
 
 #alert_box {
-	width: 160px;
+    clear: left;
+    width: 160px;
 	_width: 164px; /* for IE 6 */
-	padding: 8px 11px 8px 11px;
+    height: 30px;
+    padding: 8px 11px 8px 11px;
 	_padding: 5px 9px 6px 9px; /* for IE 6 */
-	border: 2px solid #ddeeee;
-	position: absolute;
-	margin: 570px 0 0 0;
-	_margin: 580px 0 0 0; /* for IE 6 */
+    position: relative;
+    top: 20px;
+    border: 2px solid #ddeeee;
+	/*position: absolute;*/
+	/*margin: 600px 0 0 0;*/
+	/*_margin: 610px 0 0 0; *//* for IE 6 */
 }
 
 #alert_box p {
